// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.std.runtime;

option go_package = "namespacelabs.dev/foundation/std/runtime";

message SecretInstance {
    string file_path = 1;
}
